--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -106,7 +106,9 @@ header {
 }
 
 .header-right ul li a:hover {
-    background-color: rgba(255, 255, 255, 0.814);
+    background-color: rgba(255, 255, 255, 0.4);
+    border: 1px solid rgba(255, 255, 255, 0.7);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 12px;
     transform: scale(1.15);
     color: black;
